--- a/web/terms.html
+++ b/web/terms.html
@@ -1,18 +1,11 @@
-<?php session_start() ?>
 <!DOCTYPE html>
 <html>
-
-<!--Website designed and developed by Jim Cretney, https://jacre.co
-	Changelog:
-	1.0 - 13/07/17 - Inital release
-	1.0.1 - 06/08/17 - Google Analytics, UI Modification, Adverts
-!-->
 
 <head>
 	<!-- Meta !-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Confirmation | Shaun Brady DJ Services</title>
+	<title>Terms | Shaun Brady DJ Services</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Shaun Brady DJ Services offer DJ'ing, Photography and Live Music performances to events in and around Stockport.">
 	<meta name="keywords" content="DJ, Wedding DJ, DJ Hire, DJ pro, DJ for hire, Photography, Live Music, Stockport">
@@ -53,22 +46,10 @@
 		</nav>
 	</header>
 
-	<section id ="paypal-form">
-		<img src="./img/Logo.png">
-		<h3>Your payment has been accepted!</h3>
-		<div class="payment-information box">
-			<p>Thank you for your payment! <br />
-			We will contact you shortly to confirm your payment has been received. <br />
-			You will receive a receipt via PayPal as proof of booking. <br />
-			If you have any questions feel free to contact us here:</p>
-			<div class="contact_details">
-				<p><i class="fa fa-phone" aria-hidden="true"></i> Telephone: 07932992165</p>
-				<p><i class="fa fa-envelope" aria-hidden="true"></i> Email: shaunbradydjservices@gmail.com</p>
-				<p><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook: @shaunbradydjservices</p>
-			</div>
-		</div>
-		<div class="space">
-		</div>
+	<section id ="terms">
+		<h2>Terms and Conditions</h2>
+		<h4>Last modified: 13/01/18</h4>
+		<hr />
 	</section>
 
 
