--- a/web/terms.html
+++ b/web/terms.html
@@ -50,6 +50,123 @@
 		<h2>Terms and Conditions</h2>
 		<h4>Last modified: 13/01/18</h4>
 		<hr />
+		<p>Upon completion of a booking form you are legally bound to fulfil all required payments as per your booking form unless notice of cancellation is made under the terms in section 5. </p>
+
+<p>After completion of a booking form the specified event date will be reserved ; but not secured. </p>
+
+<p>Upon receipt of deposit and booking form, Shaun Brady DJ Services will reply with confirmation, meaning your booking is secured. Your booking will then go ahead unless Shaun Brady DJ Services decides it can no longer honour the contact. </p>
+
+<p>Once confirmed by both parties the client and Shaun Brady DJ Services are legally bound to perform the duties set out in the booking form and the terms and conditions. </p>
+
+<p><b>1. Securing the booking</b></p>
+
+<p>Until secured Shaun Brady DJ Services may withdraw any offer it has made. </p>
+
+<p>Once you have agreed to a booking you will have a 7 day period, starting from the day after you entered into a contract with us, in case you change your mind.</p>
+
+<p>During this period you are entitled to a full refund, minus any costs we may have incurred in processing your agreement. </p>
+
+<p>After the 7 days your deposit will become non-refundable and if you decide to cancel you have also incur reasonable fees for any services we have provided already, if these are of a more value than the original deposit. </p>
+
+<p>Deposits cannot normally be made in cash. PayPal is the preferred method of payment. </p>
+
+<p>Bookings made with less than 7 days until the scheduled event will require full payment upfront unless paying cash on the night at the start of the event. </p>
+
+<p><b>2. Payments </b></p>
+
+<p>The remaining balance may usually be paid up to 7 days before the scheduled date via PayPal. Cash on the night is a preferred payment, however this may not be available in some situations. </p>
+
+<p>For all cash on the night payments, performance or setup may not be completed unless payment is made before the event start time. </p>
+
+<p>If you require other payment arrangements, please let Shaun Brady DJ Services know well in advance of the proposed performance. </p>
+
+<p><b>3. Additional extras </b></p>
+
+<p>Additional extras (a product or service you have requested which is not part of a standard package) may be added after the booking process. Shaun Brady DJ Services does not offer refunds or reductions if you discover an additional extra (which has been included during booking) is no longer required. </p>
+
+<p><i>3.1 Smoke machines</i></p>
+
+<p>Before booking any atmospheric effect (smoke machine) it is advised you ask your venue if they are happy for them to be used. ~It is likely your venue may be fitted with smoke detectors and the machines may set off an alarm in the venue. </p>
+
+<p><i>3.2 Bubble and snow machines </i></p>
+
+<p>Before booking please ensure your venue permits the use of these machines. If being used on hard surfaces such as a dance floor, tiled floor or any uncarpeted space these machines may cause the floor to become slippery. It is advised that all guests are warned of the risk of a slip hazard before entering the area of which the bubble machine is active. </p>
+
+<p><i>3.3 Lighting </i></p>
+
+<p>We cannot guarantee your lighting will reach some areas you may require due to lack of plug sockets, distance from plug socket or difficulty installing lights. Chosen colours often may appear different depending on background and light limitations. </p>
+
+<p><i>3.4 Glow Sticks </i></p>
+
+<p>Not suitable for children under 3 years old. Whilst glow sticks are non-toxic they should only be bent to activate and contents should not be ingested. If incorrectly used the contents may cause staining to furniture or clothing. </p>
+
+<p><i>3.5 Media </i></p>
+
+<p>These must be delivered to Shaun Brady DJ Services at least 2 weeks prior to the event and in a format specified by Shaun Brady DJ Services. Shaun Brady DJ Services cannot guarantee that content delivered past 2 weeks before the event will (a) be displayed, or (b) work correctly. Shaun Brady DJ Services reserve the right to include advertising media during the presentation. </p>
+
+<p>Should you wish to extend the performance times before the night please contact Shaun Brady DJ Services, if you decide to extend performance on the night you may discuss it with your DJ (subject to an extra cost at the discretion of the DJ)</p>
+
+<p><b>4. Parking and additional charges </b></p>
+
+<p>Please ensure a suitable parking space is available for your DJ for the length of time required. If there is no parking available next to the venue you must inform Shaun Brady DJ Services. If no parking is available and Shaun Brady DJ Services has not been made aware of any parking difficulties you will either be charged for the cost of parking and/or your start time may be delayed. Double yellow lines, time limited parking or residents only areas do not count as possible parking spaces, unless a permit is provided or the time limits allow parking from setup time to pack away time. If no other option is provided and no warning given you will be responsible for re-reimbursing the cost of any fines. </p>
+
+<p><b>5. Cancellation </b></p>
+
+<p>In the unlikely event of Shaun Brady DJ Services having to cancel due to injury , illness, or personal circumstances, a good effort will be made to find a suitable replacement. If this isn’t possible, any payments made will be returned included deposits. If either Shaun Brady DJ Services or client(s) has to cancel due to act of god where performance from Shaun Brady DJ Services becomes unfeasibly difficult or expensive the deposit will be retained. </p>
+
+<p>If the client cancels within 14 days of the booked occasion 50% of the total fee is to be paid to Shaun Brady DJ Services.</p>
+
+<p>If the client cancels within 7 days of the booked occasion or during the performance, the total fee will be liable. </p>
+
+<p>If a booking takes place within 7 days of the scheduled event the cancellation fee is 50% of the total fee. </p>
+
+<p>This also includes cancellations regarding the venue. </p>
+
+<p><b>6. Refunds </b></p>
+
+<p>Unless the performance and preparation you receive was misleading to what was advertised or agreed, in accordance with trading standards no part or full refunds will be made. This includes lack of attendance by guests, weather conditions and/or unreasonable expectations from the clients. If your DJ starts late due to parking, traffic, venue or issues which are not within their control, no partial refund will be made. Any complaints or issues during your event should be raised with your DJ during the performance and forwarded to Shaun Brady DJ Services afterwards. Any enquiries into refunds should be made after the event and it is up to the discretion of the DJ as to whether your issue is investigated further. </p>
+
+<p><b>7. Set up requirements </b></p>
+
+<p>Our setup requires at least one 240V plug socket, and room for at least one large table. Please allow more space and plug sockets for additional extras or larger set ups. Some setups can be made smaller. If this is required please inform Shaun Brady DJ Services. The average set up time is approximately 60 minutes but may be less with easy access and parking. Lack of information regarding set up and pack away times including obstacles such as stairs or long distances from DJs vehicle to set up area may result in a delayed start time, or the requirement of venue staff to stay longer whilst packing away. </p>
+
+<p>You must ensure we are made aware of any possible delays the DJ may experience (ie long distance from parking to set up area or venue not being accessible in good time).</p>
+
+<p>Your DJ will have the right to start at a later than specified time with no penalty should inadequate set up time be given or no warning for possible delays. </p>
+
+<p>Shelter must be provided for outdoor events where equipment could be damaged by weather conditions. The area of which equipment is set up must be even and solid surface to prevent accidents. Please liaise with the DJ if this is problematic. </p>
+
+<p><b>8. Certificates (PLI, PAT, etc)</b></p>
+
+<p>You can request to see documentation such as Public Liability Insurance certificates or proof of PAT testing at any point. If not specified as required during booking Shaun Brady DJ Services may use a DJ which does not possess these documents, each individual DJ has their own certificate and claims cannot be made against Shaun Brady DJ Services unless Shaun Brady is your DJ.</p>
+
+<p><b>9. Responsibilities of the client </b></p>
+
+<p>During the period of DJ hire you are responsible for your guests and any damage or theft which is caused by guests attending your event. If any of your guests cause damage or steal equipment belonging to your DJ you may be asked to pay for the replacement or repair. You must provide a safe and secure area for your DJ to operate and should the equipment or the DJs safety by threatened. The DJ reserves the right to cease performance until the threat has been satisfactorily dealt with. All children under the age of 16 must be supervised at all times by at least one adult and behaviour should be dealt with by the client. The DJ will not be liable for the supervision of minors. Verbal abuse is not tolerated and guests who are unable to behave should be dealt with by the client. If the behaviour of guests becomes, in the opinion of the DJ, intolerable, the DJ is within rights to pack down and leave the event, requesting full payment. </p>
+
+<p><b>10. Photography</b></p>
+
+<p>Your DJ may take photographs or videos during your event, should any of your guests wish otherwise please advise as soon as possible. Any material captured may be used for advertising. Should any photographs be offensive or should any guests wish them to be removed please contact Shaun Brady DJ Services. Photographs of guests under 16 will not be distributed through social media, unless the client agrees that it is acceptable. </p>
+
+<p>The Photography package is the responsibility of Owen Peters Photography and his terms and conditions are to be taken up with Owen Peters Photography. </p>
+
+<p><b>11. Advertisements / testimonials </b></p>
+
+<p>You have the right to request your DJ does not place advertisements in the way of a banner or posters placed away from the equipment set up. Some equipment may contain logos or contact information. Business cards may be left around your venue, please inform the DJ if you would prefer there absence. </p>
+
+<p>A testimonial will be requested after the proposed date, however you will not be obliged to give one.</p>
+
+<p><b>12. Your details </b></p>
+
+<p>Shaun Brady DJ Services may use the information to check current address, telephone and email address are valid along with any other relevant information provided during booking or pre-event discussions. </p>
+
+<p><b>13. Miscellaneous</b></p>
+
+<p>Shaun Brady DJ services will respond to the venue managements reasonable requests such as volume, sitting of equipment and or any other reasonable request(s).</p>
+
+<p>The client shall be responsible for ensuring compliance with all statutory provisions and local authority regulations applying to the engagement, for all insurance against public liability or any other contingency, and for all necessary Performing Rights Society and Public Performance Licences. </p>
+
+<p>Shaun Brady DJ Services and any assistants will conduct themselves in a professional manner throughout. </p>
 	</section>
 
 
