--- a/web/payment.html
+++ b/web/payment.html
@@ -62,22 +62,17 @@
 			from the dropdown menu, and enter your name before signing in
 			to PayPal. This is the most secure method of payment and we will
 			let you know when the transaction has been confirmed.</p>
-
 		</div>
 		<div class="form-container box">
 			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 				<input type="hidden" name="cmd" value="_s-xclick">
 				<input type="hidden" name="hosted_button_id" value="H3ETJUV3GT9UA">
+				<input type="hidden" name="charset" value="utf-8">
 				<table>
 				<tr><td><input type="hidden" name="on0" value="Pricing Options">Pricing Options</td></tr><tr><td><select name="os0">
 					<option value="Deposit">Deposit £20.00 GBP</option>
 					<option value="Deposit">Deposit £50.00 GBP</option>
-					<option value="Standard DJ Package">Standard DJ Package £120.00 GBP</option>
-					<option value="Live Music Package">Live Music Package £150.00 GBP</option>
-					<option value="Photography Package">Photography Package £180.00 GBP</option>
-					<option value="Ultimate Package">Ultimate Package £200.00 GBP</option>
 				</select> </td></tr>
-				<tr><td><input type="hidden" name="on1" value="Please enter your name.">Please enter your name.</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
 				</table>
 				<input type="hidden" name="currency_code" value="GBP">
 				<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
