--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -39,17 +39,17 @@
         <div class="container">
             <div class="card">
                 <div class="card-body">
-                    <table class="table">
-                        <div class="row mb-3">
-                            <div class="col-9">
-                                <h3>Registered Clients</h3>
-                            </div>
-                            <div class="col-3">
-                                <button class="btn btn-danger btn-block">
-                                    Add new
-                                </button>
-                            </div>
+                    <div class="row mb-3">
+                        <div class="col-9">
+                            <h3>Registered Clients</h3>
                         </div>
+                        <div class="col-3">
+                            <button class="btn btn-danger btn-block">
+                                Add new
+                            </button>
+                        </div>
+                    </div>
+                    <table class="table">
                         <thead>
                             <tr>
                                 <th scope="col">ID</th>
@@ -62,22 +62,22 @@
                         <tbody>
                             <tr>
                                 <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
+                                <td>Barry</td>
+                                <td>Schott</td>
                                 <td>22/10/1998</td>
                                 <td><button class="btn btn-danger btn-block edit-client-button">Edit</button></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
+                                <td>Larry</td>
+                                <td>Coont</td>
                                 <td>09/01/1999</td>
                                 <td><button class="btn btn-danger btn-block edit-client-button">Edit</button></td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
-                                <td>Larry</td>s
-                                <td>the Bird</td>
+                                <td>Jim</td>
+                                <td>Bigby</td>
                                 <td>14/02/2018</td>
                                 <td><button class="btn btn-danger btn-block edit-client-button">Edit</button></td>
                             </tr>
@@ -91,7 +91,7 @@
     <script>
         function editClient(id){
             // Build URL, and then visit
-            var url = "clients/".concat(parseInt(id)).concat(".html");
+            var url = "clients/client.html?id=".concat(parseInt(id));
             window.location = url;
         }
     </script>
