Added functionality for Add button
Add button on index links to /add.html, a form for adding a new user to localstorage.

--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -44,7 +44,7 @@
                             <h3>Registered Clients</h3>
                         </div>
                         <div class="col-3">
-                            <button class="btn btn-danger btn-block">
+                            <button onclick="location.href='clients/add.html'" class="btn btn-danger btn-block">
                                 Add new
                             </button>
                         </div>
@@ -94,12 +94,6 @@
             var url = "clients/client.html?id=".concat(parseInt(id));
             window.location = url;
         }
-    </script>
-
-    <script>
-        function addClient(){
-            // Do something
-        }    
     </script>
 
     <script>
