Removed PayPal checkout
Removed PayPal checkout functionality and associated pages.

--- a/web/admin/clients/add.html
+++ b/web/admin/clients/add.html
@@ -90,6 +90,8 @@
                 'eventDate':eventDate,
                 'deposit':deposit
             }
+
+            console.log(usersArray);
             
             if(localStorage.getItem('users') === null){
                 // Initialise the array and push item, then store it
